syntax = "proto3";

package viz3d;

service SessionService {
    rpc addSession(AddSessionRequest) returns (AddSessionResponse);
    rpc getSession(GetSessionRequest) returns (Session);

    rpc getAssignedSessions(GetAssignedSessionRequest) returns (stream Session) {};
    rpc getSessions (stream GetSessionsRequest) returns (stream Session) {}
}

message AddSessionResponse {
    string id = 1;
    string createdTimeStamp = 2;
}

message Session {
    string id = 1;
    string createdTimeStamp = 2;
    string lastUpdatedTimeStamp = 3;
    string lastBilledTimeStamp = 4;
    string correlationId = 5;
    string owner = 6;
    string renderAreaId = 7;
    string httpDataLink = 8;
    string appId = 9;
}

message AddSessionRequest {
    string id = 1;
    string renderArea = 2; 
    string httpDataLink = 3;
}

message GetSessionRequest {
    string id = 1;
}

message GetAssignedSessionRequest {
    string owner = 1;
    string appId = 2;
}

message GetSessionsRequest {
    string appId = 1;
}